--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+.app {
+  background-color: #fafafb;
+  height: 100vh;
+  display: grid;
+  place-content: center;
+}
+.app > h2 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__search {
+  height: 40px;
+  width: 30vw;
+  border: 1px solid lightgray;
+  border-radius: 20px;
+  margin-top: 20px;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__search > input {
+  border: none;
+  outline: none;
+  margin-top: 10px;
+  margin-left: 20px;
+  width: 20vw;
+}
+.app__features {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__card {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-wrap: wrap;
+  margin-left: 150px;
+  margin-right: 150px;
 }
